--- a/src/index.css
+++ b/src/index.css
@@ -25,35 +25,18 @@ h4,
 h5 {
   color: #f5f5f5;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
   line-height: 1.3;
 }
 
-h1 {
-  font-size: 6.734rem;
-}
-
-h2 {
-  font-size: 5.052rem;
-}
-
-h3 {
-  font-size: 3.79rem;
-}
-
-h4 {
-  font-size: 2.843rem;
-}
-
-h5 {
-  font-size: 2.133rem;
-}
-
-small,
-.text_small {
-  font-size: 1.2rem;
-}
-
-a {
+a,
+a:active,
+a:visited {
+  color: #b3b3b3;
+  font-size: 1.8rem;
   text-decoration: none;
+  transition: color 0.2s;
+}
+
+a:hover {
+  color: #f5f5f5;
 }
